Fixed Alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -268,6 +268,7 @@ a:hover {
 #home-content {
     position: absolute;
     top: 35%;
+    left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Dosis', sans-serif;
 }
